[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/SaveList.gd" type="Script" id=1]

[node name="SaveList" type="Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_root = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cell_selected" from="." to="." method="_on_SaveList_cell_selected"]
[connection signal="focus_exited" from="." to="." method="_on_SaveList_focus_exited"]
[connection signal="item_edited" from="." to="." method="_on_SaveList_item_edited"]
[connection signal="nothing_selected" from="." to="." method="_on_SaveList_nothing_selected"]
[connection signal="visibility_changed" from="." to="." method="_on_SaveList_visibility_changed"]
